# energy-pipeline

./: .env.example  .gitignore  .markdownlint.json  README.md  docker-compose.yml  justfile  pyproject.toml
backend/: .env.example  Dockerfile  database.py  main.py  models.py  request_metrics.py  routes.py  schemas.py
cloud/: Dockerfile
cloud/app/: main.py  verifier.py
cloud/tests/: test_verifier.py
config/mosquitto/: mosquitto.conf
database/: init.sql
database/migrations/: env.py
docs/: api-contract.md  architecture.md  evaluation-plan.md  schematic.tex  simulation.md  thesis-notes.md
docs/figures/: architecture.mmd
docs/thesis/: 00_table_of_contents.md  01_introduction.md  02_literature_review.md  03_proposed_system_architecture.md  04_implementation_methodology.md  05_experimental_evaluation.md  06_results_and_discussion.md  07_conclusion_and_future_work.md  README.md
experiments/: run_load_experiments.py
experiments/results/: 100-devices-1s.json  1000-devices-1s.json  300-devices-1s.json  500-devices-1s.json  summary.md
firmware/: PLAN.md  README.md  cubemx-checklist.md  hardware-build.md
firmware/app/: mqtt_app.c  sensor_sim.c
firmware/blackpill-node/: config.h  cubemx-checklist.md
firmware/hardware/: README.md  schematic.py
firmware/node-f429zi/: .cproject  .mxproject  .project  STM32F429ZITX_FLASH.ld  STM32F429ZITX_RAM.ld  node-f429zi.ioc
firmware/renode/: nucleo_f429zi.resc  run.sh  setup-tap.sh
gateway/: Dockerfile  pyproject.toml
gateway/app/: config.py  container.py  lifespan.py  logging_config.py  main.py
gateway/app/api/: devices.py  events.py  health.py  metrics.py  readings.py  rules.py
gateway/app/db/: models.py  repositories.py  session.py  timescale.py
gateway/app/db/repositories/: __init__.py  alert_outbox.py  devices.py  events.py  predictions.py  quality.py  readings.py  rules.py  status.py
gateway/app/mqtt/: client.py  handlers.py  topics.py
gateway/app/schemas/: common.py  events.py  status.py  telemetry.py
gateway/app/services/: alert_service.py  anomaly_detector.py  ingestion_service.py  metrics_service.py  rule_engine.py  storage_policy.py  validation_service.py
gateway/app/services/ingestion/: __init__.py  device_events.py  helpers.py  service.py  status.py  telemetry.py
gateway/app/workers/: aggregation_worker.py  alert_outbox.py  cloud_forwarder.py  device_heartbeat.py  ml_scoring.py  mqtt_consumer.py
gateway/config/: rules.yaml
gateway/tests/: conftest.py  test_alert_service.py  test_metrics_service.py  test_rule_engine.py  test_topics.py  test_validation.py
gateway/tests/api/: test_smoke.py
gateway/tests/db/: test_repositories.py
gateway/tests/scripts/: test_scripts.py
gateway/tests/services/: test_alert_service.py  test_anomaly_detector.py  test_metrics_service.py  test_rule_engine.py  test_storage_policy.py  test_validation.py
gateway/tests/workers/: test_alert_outbox_worker.py  test_cloud_forwarder.py  test_lifecycle.py
models/: cloud_lstm_ae.npz
presentation/: .gitignore  README.md  package-lock.json  package.json  slides.md  style.css
results/: README.md
results/anomaly_model/: offline_evaluation.json
results/baseline/: report.md  snapshot.json
scripts/: export_results.py  make_thesis_figures.py  run_anomaly_detection_test.sh  run_baseline_test.sh  run_cloud_verification_test.sh  run_detection_ab_test.sh  run_escalation_bandwidth_test.sh  run_high_throughput_ab_test.sh  run_proposed_test.sh  train_anomaly_model.py  train_cloud_lstm.py
simulator/: Dockerfile  mqtt_publisher.py  simulator.py
(+99 files in other folders)
