[project]
name = "energy-pipeline"
version = "0.1.0"
description = "Event-driven edge gateway for IoT-based smart energy monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "aiomqtt>=2.3.0",
    "alembic>=1.16.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "structlog>=24.4.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "schemdraw>=0.23",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "ty>=0.0.55",
]
# Training-only (Phase 3): the cloud tier runs numpy-only inference from an
# exported .npz artifact, so torch never enters a container image.
ml-train = [
    "torch>=2.4.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["gateway/tests", "cloud/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "B008"]
